--- a/OneDrive/My Github/Amazon Clone/index.html
+++ b/OneDrive/My Github/Amazon Clone/index.html
@@ -172,7 +172,7 @@
             <div class="pages">
                 <a>Conditions of Use</a>
                 <a>Privacy Notice</a>
-                <a>Your Ads Privacy Choices</a>
+                <a>Yours Ads Privacy Choices</a>
             </div>
             <div class="copyright">
                 © 1996-2023, Amazon.com, Inc. or its affiliates
